# Haptic_Shoes_Synthetic_Effects

./: Combined.pd  FSR_PD.pd  FSR_PD.py  Hard_impact.pd  README.md  READ_FSR.py  READ_LSM9DS1.py  READ_VL6180.py  Snow.pd  VL6180_i2c_Renumber.py  distance_velocity.txt  main.py  pub.py  sensor.py  testing.pd  testsensor.py  value_writer.py  waterEffectTrigger.py  waterEffectTrigger.py.save  watershoetrig.py  zone_writer.py
Prototype_Unity_Interface/: Haptics_Interface.cs
backup/: Hard_impact.pd
xoscope-2.3/: ChangeLog  Makefile.am  Makefile.in  README  comedi_gtk.c  config.h  config.h.in  configure  configure.ac  display.c  xoscope.c  xoscope.css.in  xoscope.css.m4  xoscope.glade  xoscope.h  xoscope.spec  xoscope_gtk.c  xoscope_gtk.h
