## Process this file with automake to produce Makefile.in

# Copyright (C) 1996 - 2001 Tim Witham <twitham@quiknet.com>
# Copyright (C) 2015 Brent Baccala <cosine@freesoft.org>

# (see the files README and COPYING for more details)

# Look at ./configure --help before tweaking this.

man_MANS = xoscope.1

noinst_HEADERS = xoscope_gtk.h display.h file.h xoscope.h \
config.h func.h fft.h

bin_PROGRAMS = xoscope

Applicationsdir = $(datadir)/applications/
Applications_DATA = net.sourceforge.xoscope.desktop

Metainfodir = $(datadir)/metainfo/
Metainfo_DATA = net.sourceforge.xoscope.appdata.xml

EXTRA_DIST = $(man_MANS) $(noinst_HEADERS) \
TODO TODO.old xoscope.lsm operl.in operl.help \
count.dat oscope.dat audio.dat bitscope.dat proscope.dat \
xoscope.glade xoscope.css.in xoscope.css.m4 xoscope.png xoscope.spec \
net.sourceforge.xoscope.desktop net.sourceforge.xoscope.appdata.xml \
hardware/HARDWARE hardware/buff.fig hardware/buff.ps \
hardware/buff2.fig hardware/buff2.ps hardware/pcb.fig hardware/pcb.ps \
hardware/xoscope-components.png hardware/xoscope-copper.png

src = xoscope.c xoscope_gtk.c file.c func.c display.c
fftsrc = fft.c 

if COMEDI
comedisrc = comedi.c comedi_gtk.c
endif

#if ESD
#esdsrc = esd.c esd_gtk.c
#endif

if ASOUND
asoundsrc = alsa.c
endif

AM_CPPFLAGS = @GTK_CFLAGS@ @GTKDATABOX_CFLAGS@ -export-dynamic -DPACKAGE_LIBEXEC_DIR='"$(bindir)"'
AM_CPPFLAGS += -DGTK_DISABLE_SINGLE_INCLUDES
AM_CPPFLAGS += -DGTK_DISABLE_DEPRECATED
AM_CPPFLAGS += -DGDK_DISABLE_DEPRECATED
AM_CPPFLAGS += -DGSEAL_ENABLE

.PRECIOUS: xoscope.glade xoscope.css.m4 xoscope.css.in

xoscope_SOURCES = $(src) $(comedisrc) $(esdsrc) $(asoundsrc) $(fftsrc)
xoscope_LDADD = @GTK_LIBS@ @GTKDATABOX_LIBS@
xoscope_DEPENDENCIES = xoscope.css
xoscope_LDFLAGS = -Wl,--export-dynamic

# I compile in some auxilary files so I don't have to worry about what
# happens if they can't be found at runtime.

MOSTLYCLEANFILES = builtins.h xoscope.css

xoscope.css: $(top_srcdir)/xoscope.css.m4 $(top_srcdir)/xoscope.css.in
	echo "/* xoscope.css generated by make from xoscope.css.in and xoscope.css.m4.*/" > $@
	echo "/* DO NOT EDIT THIS FILE!                                               */" >> $@
	m4 $(top_srcdir)/xoscope.css.m4 $(top_srcdir)/xoscope.css.in >> $@
	sed -i -e '/^$$/d' $@

builtins.h: $(top_srcdir)/xoscope.css $(top_srcdir)/xoscope.glade $(top_srcdir)/operl.in $(top_srcdir)/operl.help $(top_srcdir)/xoscope.png
	echo "/* builtins.h generated by make from xoscope.css and xoscope.glade.*/" > $@
	echo "/* DO NOT EDIT THIS FILE!                                         */" >> $@
	echo "char * xoscope_css = " >> $@
	sed -e 's/"/\\"/g' -e 's/^/"/' -e 's/$$/ "/' $(top_srcdir)/xoscope.css >> $@
	echo ";" >> $@
	echo "char * gladestring = " >> $@
	sed -e 's/"/\\"/g' -e 's/^/"/' -e 's/$$/"/' $(top_srcdir)/xoscope.glade >> $@
	echo ";" >> $@
	echo "char * operl_program = " >> $@
	sed -e 's/\\/\\\\/g' -e 's/"/\\"/g' -e 's/^/"/' -e 's/$$/\\n"/' $(top_srcdir)/operl.in >> $@
	echo ";" >> $@
	echo "char * operl_help_text = " >> $@
	sed -e 's/\\/\\\\/g' -e 's/"/\\"/g' -e 's/^/"/' -e 's/$$/\\n"/' $(top_srcdir)/operl.help >> $@
	echo ";" >> $@
#gdk-pixbuf-csource --name=xoscope_128x128 --struct xoscope.png >> $@

xoscope_gtk.o: builtins.h

install-data-local:
	@$(NORMAL_INSTALL)
	$(INSTALL_DATA) -D xoscope.png $(DESTDIR)$(datadir)/pixmaps/xoscope.png
